# compas_xr

./: .bumpversion.cfg  .editorconfig  .gitignore  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  README.md  README.rst  conftest.py  dummy.py  environment.yml  index.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  surface.usda  tasks.py  versions.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  docs.yml  ironpython.yml  release.yml
0.9.0/: citing.html  license.html  objects.inv
0.9.0/.doctrees/: citing.doctree
0.9.1/: api.html  search.html  userguide.html
0.9.1/api/: compas_xr.project.html
0.9.2/: searchindex.js
0.9.2/_static/: documentation_options.js
0.9.2/api/: compas_xr.realtime_database.html  compas_xr.storage.html
0.9.3/: genindex.html
0.9.3/.doctrees/: index.doctree
0.9.3/.doctrees/api/: compas_xr.ghpython.doctree
0.9.3/_static/: documentation_options.js
0.9.3/api/: compas_xr.ghpython.html  compas_xr.html  compas_xr_unity.html
0.9.4/: .buildinfo  citing.html  index.html  installation.html  searchindex.js
0.9.4/.doctrees/: citing.doctree
0.9.4/_static/: documentation_options.js
0.9.4/api/: compas_xr.mqtt.html
1.0.0/: .buildinfo  api.html  citing.html  genindex.html  index.html  installation.html  license.html  objects.inv  search.html  searchindex.js  userguide.html
1.0.0/.doctrees/: installation.doctree
1.0.0/api/: compas_xr.ghpython.html  compas_xr.html  compas_xr.mqtt.html  compas_xr.project.html  compas_xr.realtime_database.html  compas_xr.storage.html  compas_xr_unity.html
data/: THISISYOURCHILDFILE.json  THISISYOURFILE.json  assembly_70_T3.json  assembly_jsonexport.json  assembly_structure.json  assembly_structure_joint_list.json  assembly_structure_joint_list_2.json  assembly_structure_test2.json  assembly_timbers_upload.json  assembly_upload.json  assembly_upload_timbers.json  data_upload.json  data_upload_frame.json  random.3.json  random.json  timber_assembly_adjusted.json  timber_assembly_adjusted_3elements.json  timber_assembly_jsonexport.json
docs/: api.rst  citing.rst  conf.py  examples.rst  index.rst  installation.rst  license.rst  userguide.rst
docs/api/: compas_xr.ghpython.rst  compas_xr.mqtt.rst  compas_xr.project.rst  compas_xr.realtime_database.rst  compas_xr.rst  compas_xr.storage.rst  compas_xr_unity.rst
docs/examples/: 01_scene_mesh.py  01_scene_mesh.rst  02_scene_prim.rst  03_scene_instances.py  03_scene_instances.rst  04_omniverse_connect.py  04_omniverse_connect.rst  04_scene_with_texture_usd.py  04_scene_with_texture_usd.rst  05_scene_with_texture_gltf.py  05_scene_with_texture_gltf.rst  50_omniverse_connect.rst  example.py  idl.py  scene_instances.py  scene_mesh.py  scene_prim.py  scene_with_texture.gltf  test2.usda  usdz_convert.py  webXR.rst
docs/examples/idl/: canvas.gltf  canvas.usda  idl.gltf  idl.json  idl.py  idl.usda  speaker.usda
docs/examples/scene_with_instances/: scene_with_instances.3dm  scene_with_instances.3dm.rhl  scene_with_instances.3dmbak
docs/examples/scripts/: ex1_assembly_definition_and_firebaseupload.ghx  (+1 more)
docs/examples/webXR/: AR_and_VR_examples.py  (+5 more)
docs/reference/: index.rst
grasshopper/: ar_material.gh  ar_scene.gltf  ar_scene.json  ar_scene.usdz  ar_to_web.gh  connect.py  connect_omni.ghx
latest/: .buildinfo  api.html  citing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  userguide.html
latest/.doctrees/: api.doctree  examples.doctree  index.doctree  installation.doctree  license.doctree  userguide.doctree
latest/api/: compas_xr.ghpython.html  compas_xr.html  compas_xr.mqtt.html  compas_xr.project.html  compas_xr.realtime_database.html  compas_xr.storage.html  compas_xr_unity.html
scripts/: t2_demo_model_testing.ghx  test_read_config.ghx  timbers_firebase_communication.ghx
src/compas_xr/: __init__.py  __version__.py  conftest.py  print_test.py  realtime_database.py  storage.py
stable/: index.html
tests/: test_material.py  test_sample.py  test_scene.py  test_shading.py
tests/fixtures/: reminder.txt  test2.usda
(+126 files in other folders)
